<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="br.com.minhapizzaria.ui.view.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login"
        >
        <action
            android:id="@+id/action_loginFragment_to_escolhaFragment"
            app:destination="@id/escolhaFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>
    <fragment
        android:id="@+id/escolhaFragment"
        android:name="br.com.minhapizzaria.ui.view.escolha.EscolhaFragment"
        android:label="@string/title_escolha"
        tools:layout="@layout/fragment_escolha"
        >
        <action
            android:id="@+id/action_escolhaFragment_to_detalheFragment"
            app:destination="@id/detalheFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalheFragment"
        android:name="br.com.minhapizzaria.ui.view.detalhe.DetalheFragment"
        android:label="@string/title_detalhe"
        tools:layout="@layout/fragment_detalhe"
        >
        <argument
            android:name="detalhes"
            app:argType="br.com.minhapizzaria.ui.view.detalhe.DetalheArgs"
            app:nullable="true" />
        <argument
            android:name="rating"
            app:argType="float" />
        <action
            android:id="@+id/action_detalheFragment_to_sucessoFragment"
            app:destination="@id/sucessoFragment" />
    </fragment>
    <fragment
        android:id="@+id/sucessoFragment"
        android:name="br.com.minhapizzaria.ui.view.sucesso.SucessoFragment"
        android:label="@string/title_sucesso"
        tools:layout="@layout/fragment_sucesso"
        >
        <action
            android:id="@+id/action_sucessoFragment_to_escolhaFragment"
            app:destination="@id/escolhaFragment" />
    </fragment>
</navigation>