<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@null" />

    </RelativeLayout>

    <TextView
        android:id="@+id/sabor_pizza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/branco"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <RatingBar
        android:id="@+id/ratingBarPizza"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:progressTint="@color/cor_rating_bar"
        android:rating="2.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sabor_pizza" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/escolher_tamanho"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarPizza" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pizza_pequena"
        style="@style/BotaoVerde"
        android:layout_width="79.18dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/pequena"
        app:cornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pizza_media"
        style="@style/BotaoVerde"
        android:layout_width="79.18dp"
        android:layout_height="46dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="70dp"
        android:text="@string/media"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/pizza_grande"
        app:layout_constraintStart_toEndOf="@+id/pizza_pequena"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pizza_grande"
        style="@style/BotaoVerde"
        android:layout_width="79.18dp"
        android:layout_height="46dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/grande"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/preco_pizza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/branco"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
         />

    <Button
        android:id="@+id/comprar"
        style="@style/BotaoVerde"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:background="@color/botao_verde"
        android:text="@string/comprar"
        android:textAllCaps="false"
        android:textColor="@color/branco"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

</androidx.constraintlayout.widget.ConstraintLayout>