<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/logo" />


    </RelativeLayout>





    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:text="@string/entrar"
        android:textColor="@color/branco_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text"
        android:drawablePadding="20dp"
        android:hint="@string/senha"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:textSize="14sp"
app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/usuario"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        android:layout_marginEnd="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/entrar"
        style="@style/MeuButton"
        android:layout_width="0dp"
        android:layout_height="53.16dp"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/botao"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />


</androidx.constraintlayout.widget.ConstraintLayout>